--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "EKRK Signup",
+  "name": "EKRK-Signup",
   "version": "0.0.1",
   "author": "Argo Roots <argo@roots.ee>",
   "private": true,
