--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ekrk-signup",
   "version": "0.0.2",
-  "author": "Argo Roots <argo@roots.ee>",
   "private": true,
+  "description": "EKRK signup form",
+  "author": "Argo Roots <argo@roots.ee>",
   "scripts": {
     "bower": "bower install",
     "dev": "grunt",
@@ -10,14 +11,14 @@
   },
   "devDependencies": {
     "bower": "1.8.14",
-    "grunt": "1.5.2",
-    "grunt-contrib-clean": "2.0.0",
+    "grunt": "1.5.3",
+    "grunt-contrib-clean": "2.0.1",
     "grunt-contrib-connect": "3.0.0",
     "grunt-contrib-cssmin": "4.0.0",
     "grunt-contrib-jade": "1.0.0",
     "grunt-contrib-less": "3.0.0",
     "grunt-contrib-stylus": "1.2.0",
-    "grunt-contrib-uglify": "5.1.0",
+    "grunt-contrib-uglify": "5.2.2",
     "grunt-contrib-watch": "1.1.0",
     "grunt-include-replace": "5.0.0"
   }
